--- a/drivers/video/msm/mdss/Kconfig
+++ b/drivers/video/msm/mdss/Kconfig
@@ -54,3 +54,9 @@ config FB_MSM_MDSS_HDMI_MHL_SII8620_8061
 	MHL (Mobile High-Definition Link) technology
         uses USB connector to output HDMI content
 
+config FB_MSM_MDSS_KCAL_CTRL
+	depends on FB_MSM_MDSS
+	bool "MDSS color control"
+	---help---
+	  Enable sysfs for post-processing control of mdss-mdp5 display
+	  controllers in MDSS.
