--- a/arch/arm/configs/shinano_sirius_defconfig
+++ b/arch/arm/configs/shinano_sirius_defconfig
@@ -123,6 +123,7 @@ CONFIG_CPU_FREQ_GOV_IMPULSE=y
 CONFIG_CPU_FREQ_GOV_ALUCARD=y
 CONFIG_CPU_FREQ_GOV_BIOSHOCK=y
 CONFIG_CPU_FREQ_GOV_SMARTMAX=y
+CONFIG_FORCE_FAST_CHARGE=y
 CONFIG_CPU_IDLE=y
 CONFIG_VFP=y
 CONFIG_NEON=y
