--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -3202,6 +3202,33 @@ config HAS_MACH_MEMUTILS
 	help
 	Faster memcpy performance for Krait
 
+config MAKO_HOTPLUG
+        tristate "Enable mako-hotplug cpu hotplug driver"
+        default m
+        help
+          Generic Intelli-plug cpu hotplug driver for ARM SOCs
+
+config MSM_HOTPLUG
+	tristate "MSM hotplug driver"
+	depends on HOTPLUG_CPU
+	default y
+	help
+	  The MSM hotplug driver controls on-/offlining of additional cores based
+	  on current cpu load.
+
+config BRICKED_HOTPLUG
+	bool "Enable kernel based mpdecision"
+	depends on MSM_RUN_QUEUE_STATS
+	default y
+	help
+	  This enables kernel based multi core control.(up/down hotplug based on load)
+
+config FORCE_FAST_CHARGE
+        bool "Force AC charge mode at will"
+          default n
+          help
+            A simple sysfs interface to force adapters that are detected as USB to charge as AC.
+
 endif
 
 config KERNEL_TEXT_MPU_PROT
