--- a/arch/arm/configs/shinano_sirius_defconfig
+++ b/arch/arm/configs/shinano_sirius_defconfig
@@ -410,8 +410,13 @@ CONFIG_SENSORS_EPM_ADC=y
 CONFIG_SENSORS_QPNP_ADC_VOLTAGE=y
 CONFIG_SENSORS_QPNP_ADC_CURRENT=y
 CONFIG_THERMAL=y
+CONFIG_THERMAL_HWMON=y
+# CONFIG_THERMAL_MSM_POPMEM is not set
+# CONFIG_THERMAL_TSENS is not set
+# CONFIG_THERMAL_TSENS8960 is not set
 CONFIG_THERMAL_TSENS8974=y
-CONFIG_THERMAL_MONITOR=y
+CONFIG_INTELLI_THERMAL_V2=y
+# CONFIG_THERMAL_MONITOR is not set
 CONFIG_THERMAL_QPNP=y
 CONFIG_THERMAL_QPNP_ADC_TM=y
 CONFIG_WCD9320_CODEC=y
@@ -451,6 +456,7 @@ CONFIG_FB_MSM=y
 # CONFIG_FB_MSM_BACKLIGHT is not set
 CONFIG_FB_MSM_LOGO=y
 CONFIG_FB_MSM_MDSS=y
+CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 CONFIG_FB_MSM_MDSS_WRITEBACK=y
 CONFIG_FB_MSM_MDSS_SPECIFIC_PANEL=y
 CONFIG_FB_MSM_MDSS_HDMI_PANEL=y
